--- a/views/index.ejs
+++ b/views/index.ejs
@@ -321,9 +321,9 @@
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
-                <!-- <p class="price">
-                  $5.95
-                </p> -->
+                <p class="price">
+                  RM 8.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
@@ -332,9 +332,9 @@
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
-                <!-- <p class="price">
-                  $14.95
-                </p> -->
+                <p class="price">
+                  RM 40.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
@@ -343,9 +343,9 @@
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
-                <!-- <p class="price">
-                  $8.95
-                </p> -->
+                <p class="price">
+                  RM 8.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
@@ -354,9 +354,9 @@
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
-                <!-- <p class="price">
-                  $12.95
-                </p> -->
+                <p class="price">
+                  RM 9.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
@@ -365,9 +365,9 @@
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
-                <!-- <p class="price">
-                  $12.95
-                </p> -->
+                <p class="price">
+                  RM 8.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
@@ -376,9 +376,9 @@
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
-                <!-- <p class="price"> -->
-                <!-- $9.95 -->
-                <!-- </p> -->
+                <p class="price">
+                  RM 8.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
@@ -387,19 +387,25 @@
                 <!-- <p class="ingredients">
                   Lorem, deren, trataro, filede, nerada
                 </p> -->
-                <!-- <p class="price"> -->
-                <!-- $9.95 -->
-                <!-- </p> -->
+                <p class="price">
+                  RM 8.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-8.jpeg" class="glightbox"><img src="assets/img/menu/menu-item-8.jpeg" class="menu-img img-fluid" alt=""></a>
                 <h4>Nasi Goreng Seafood</h4>
+                <p class="price">
+                  RM 10.00
+                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/menu-item-9.jpeg" class="glightbox"><img src="assets/img/menu/menu-item-9.jpeg" class="menu-img img-fluid" alt=""></a>
                 <h4>Kerabu Udang</h4>
+                <p class="price">
+                  RM 9.00
+                </p>
               </div><!-- Menu Item -->
 
             </div>
@@ -1386,8 +1392,24 @@
       const dd = String(today.getDate()).padStart(2, '0');
       const formattedToday = `${yyyy}-${mm}-${dd}`;
 
+      // const yearEnd = new Date(today.getFullYear(), 11, 31);
+      // const formattedYearEnd = yearEnd.toISOString().split('T')[0]; 
+
+      const threeMonthsFromToday = new Date(today);
+      threeMonthsFromToday.setMonth(today.getMonth() + 3);
+
+      // Ensure the date is valid in case the month calculation rolls over to the next year
+      if (threeMonthsFromToday.getDate() !== today.getDate()) {
+        threeMonthsFromToday.setDate(0);
+      }
+
+      const formattedThreeMonthsFromToday = threeMonthsFromToday.toISOString().split('T')[0];
+
       // Set the min attribute of the date input
       document.getElementById('date').setAttribute('min', formattedToday);
+      // document.getElementById('date').setAttribute('max', formattedYearEnd);
+      document.getElementById('date').setAttribute('max', formattedThreeMonthsFromToday);
+
 
       navLinks.forEach(link => {
         link.addEventListener('click', function(event) {
